tests/error/functions-4.moc
void print(char* s) {
}

void main() {
    print();
}
